--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           </p>
           </article>
           <div class="ring-container">
-            <img  class="rings-img" src="assets/images/rings.svg" alt="wedding rings" style="width: 50vw;">
+            <img  class="rings-img" src="assets/images/rings.svg" alt="wedding rings">
   
           </div>
         </div>
