--- a/develop/index.html
+++ b/develop/index.html
@@ -24,8 +24,8 @@
       </header>
       <nav>
         <a href="#HOME">Home</a>
-        <a href="#OURSTORY">Our Story</a>
-        <a href="#THEWEDDING">The Wedding</a>
+        <a href="./story.html">Our Story</a>
+        <a href="./wedding.html">The Wedding</a>
         <a href="#REGISTRY">Registry</a>
         <a href="./rsvp.html">RSVP</a>
       </nav>
