--- a/develop/rsvp.html
+++ b/develop/rsvp.html
@@ -12,7 +12,7 @@
         <p id="intro">S │ B</p>
         <p id="location">Date and location go here</p>
         <p id="name"> Name </p>
-        <div class="name-box"></div>
+        <div class="name-box" inputmode="type" ><p></p></div>
         <p id="attend-question"> Will you be attending? </p>
         <p id="food-allergies"> Known food allergies</p>
         <div class="food-box"></div>
