--- a/sefubrenda.com/index.html
+++ b/sefubrenda.com/index.html
@@ -7,79 +7,45 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <!-- Bootstrap CSS -->
+   
+   
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.8.1/dist/css/foundation.min.css" crossorigin="anonymous">
+
+
     <link rel="stylesheet" href="./css/style.css" />
 
 
     <title>S & B</title>
   </head>
   <body>
-    <div class="header-container">
-      <div class="header-imgs">
-        <img id="img-left" src="images/flowers.svg" alt="flowers" />
-        <img id="img-right" src="images/flowers.svg" alt="flowers" />
-      </div>
-      <header>
-        <h1>BRENDA & SEFUFIM</h1>
-      </header>
-      <nav>
-        <a href="#HOME">Home</a>
-        <a href="./story.html">Our Story</a>
-        <a href="./wedding.html">The Wedding</a>
-        <a href="#REGISTRY">Registry</a>
-        <a href="./rsvp/rsvp.html">RSVP</a>
-      </nav>
+ <div class="grid-x">
+  <div class="cell text-center" id="title">
+    <h1>BRENDA & SEFUFIM</h1>
+  </div>
+ </div>
+      <ul class="menu menu-hover-lines align-center nav">
+        <li class="active"><a href="./story.html">Our Story</a></li>
+        <li> <a href="./wedding.html">The Wedding</a></li>
+        <li><a href="#REGISTRY">Registry</a></li>
+        <li><a href="#PHOTOS">Photos</a></li>
+        <li> <a href="./rsvp/rsvp.html">RSVP</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
     </div>
-    <div class="container">
-      <div class="slideshow-container">
-        <section id="image-carousel" class="splide" aria-label="Beautiful Images">
-          <div class="splide__track">
-            <ul class="splide__list">
-              <li class="splide__slide">
-                <img src="images/proposal.jpg" alt="proposal">
-              </li>
-              <li class="splide__slide">
-                <img src="image02.jpg" alt="">
-              </li>
-              <li class="splide__slide">
-                <img src="image03.jpg" alt="">
-              </li>
-            </ul>
-          </div>
-        </section>
-        <!-- Slider main container -->
+    <div class="grid-x">
+      <div class="cell text-center">
+        <div id="countdown-timer"></div>
       </div>
-      <div class="content">
-        <article>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat
-            non proident, sunt in culpa qui officia deserunt mollit anim id est
-            laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-            nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-            culpa qui officia deserunt mollit anim id est laborum.
-          </p>
-        </article>
-        <div class="ring-container">
-          <img
-            class="rings-img"
-            src="images/rings.svg"
-            alt="wedding rings"
-          />
-        </div>
-      </div>
+    
+     </div>
+    
     </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css"rel="stylesheet"/>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+    <script src="./script/script.js"> </script>
 
-    <script src="./assets/script/script.js"></script>
   </body>
 </html>
