--- a/sefubrenda.com/rsvp/rsvp.html
+++ b/sefubrenda.com/rsvp/rsvp.html
@@ -12,6 +12,7 @@
 
 </head>
 <body>
+  <!-- nav bar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand mr">Brenda & Sefu</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -39,8 +40,12 @@
         </li>
       </ul>
     </div>
-    
   </nav>
+    <div class="img-container">
+      <p id="page-title"> Brenda y sefu </p>
+      <img src="./css/soft_green_floral_wreath_with_watercolor.jpg" alt="Flower ring">
+    </div>
+  <!-- Rsvp form -->
   <section>
     <form>
       <div class="form-group">
@@ -48,7 +53,7 @@
         <input type="name" class="form-control" id="names" placeholder="John Smith">
       </div>
       <div class="form-group">
-        <label for="attendance" id="attendance-title"  >Will you be attending?</label>
+        <p id="attendance"  >Will you be attending?</p>
       </div>
       <div class="form-check">
         <div class="radio-container">
@@ -66,13 +71,16 @@
       </div>
     </div>
       <div class="form-group">
-        <label for="exampleFormControlTextarea1">Known food allergies</label>
-        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+        <label for="allergies">Known food allergies</label>
+        <textarea class="form-control" id="allergies" rows="3"></textarea>
       </div>
     </form>
     
 
   </section>
+  <footer>
+    <a href="https://www.freepik.com/free-vector/soft-green-floral-wreath-with-watercolor_38643753.htm#page=3&query=floral%20wreath%20svg&position=35&from_view=keyword&track=ais">Image by asrulaqroni</a> on Freepik
+  </footer>
     <!-- <div class="name-box"></div> -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
