testing out different styles

--- a/sefubrenda.com/rsvp/rsvp.html
+++ b/sefubrenda.com/rsvp/rsvp.html
@@ -41,12 +41,16 @@
       </ul>
     </div>
   </nav>
-    <div class="img-container">
-      <p id="page-title"> Brenda y sefu </p>
-      <img src="./css/soft_green_floral_wreath_with_watercolor.jpg" alt="Flower ring">
-    </div>
+  <div class="img-container">
+    <img src="./css/weddinglogo.jpeg" alt="Flower ring" style="display: none;">
+    
+  </div>
+  
   <!-- Rsvp form -->
   <section>
+    <div class="form-container">
+      
+    </div>
     <form>
       <div class="form-group">
         <label for="names">Name(s) :</label>
