--- a/sefubrenda.com/index.html
+++ b/sefubrenda.com/index.html
@@ -7,45 +7,63 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-   
-   
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.8.1/dist/css/foundation.min.css" crossorigin="anonymous">
-
-
+    <!-- foundation css framework -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/foundation-sites@6.8.1/dist/css/foundation.min.css"
+      crossorigin="anonymous"
+    />
+    <!-- bootstrap css framework -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+    <!-- google fonts  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Tangerine:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css" />
-
-
     <title>S & B</title>
   </head>
   <body>
- <div class="grid-x">
-  <div class="cell text-center" id="title">
-    <h1>BRENDA & SEFUFIM</h1>
-  </div>
- </div>
-      <ul class="menu menu-hover-lines align-center nav">
-        <li class="active"><a href="./story.html">Our Story</a></li>
-        <li> <a href="./wedding.html">The Wedding</a></li>
-        <li><a href="#REGISTRY">Registry</a></li>
-        <li><a href="#PHOTOS">Photos</a></li>
-        <li> <a href="./rsvp/rsvp.html">RSVP</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
+    <div class="grid-x">
+      <div class="cell text-center" id="title">
+        <h1>BRENDA & SEFUFIM</h1>
+      </div>
     </div>
+    <ul class="menu menu-hover-lines align-center nav">
+      <li><a href="../sefubrenda.com/story/story.html">Our Story</a></li>
+      <li><a href="./wedding.html">The Wedding</a></li>
+      <li><a href="#REGISTRY">Registry</a></li>
+      <li><a href="#PHOTOS">Photos</a></li>
+      <li><a href="./rsvp/rsvp.html">RSVP</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
     <div class="grid-x">
       <div class="cell text-center">
         <div id="countdown-timer"></div>
       </div>
-    
-     </div>
-    
     </div>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css"rel="stylesheet"/>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-    <script src="./script/script.js"> </script>
+    <!-- photo carusel -->
+    <div class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="./images/proposal.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="./images/IMG_2171.JPG" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="./images/IMG_2179.JPG" class="d-block w-100" alt="...">
+        </div>
+      </div>
+    </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+    <script src="./script/script.js"></script>
   </body>
 </html>
