--- a/sefubrenda.com/story/story.html
+++ b/sefubrenda.com/story/story.html
@@ -22,13 +22,15 @@
       <nav>
       <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-          <div class="container">
-             <a class="navbar-brand" href="#">Brenda & Sefu</a>
+          <div class="container-fluid">
+             <div class="navbar-brand">
+                <a href="#"> Brenda & Sefu</a>
+             </div>
              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
              </button>
              <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ml-auto">
+                <ul class="navbar-nav ms-auto text-center mb-2 mb-lg-0">
                    <li class="nav-item">
                       <a class="nav-link" href="../index.html">HOME</a>
                    </li>
