--- a/sefubrenda.com/story/story.html
+++ b/sefubrenda.com/story/story.html
@@ -23,7 +23,7 @@
       <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
           <div class="container-fluid">
-             <div class="navbar-brand">
+             <div class="navbar-brand names ">
                 <a href="#"> Brenda & Sefu</a>
              </div>
              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -60,31 +60,90 @@
          <div class="container">
             <div class="row">
                <p class="our-story">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum 
-                  dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                  Welcome to our story, where you'll find the simple, heartfelt story of Brenda and Sefufim. Our love is like a blooming flower that started with a smile and grew with every shared laugh, and memory. It's about the times we've spent together, the little moments that make life sweet, and the feeling of being truly ourselves when we're with each other. Our website is all about the love we've built in the most natural way possible, and we're excited to share it with you. Thanks for being a part of our love story.
                </p>
             </div>
          </div>
       </section>
       <!-- timeline -->
-<section style="background-color: #F0F2F5;">
-  <div class="container py-5">
-    <div class="main-timeline-2">
-      <div class="timeline-2 left-2">
-        <div class="card" style="width: 18rem;">
-          <img src="http://via.placeholder.com/640x360
-          " class="card-img-top" alt="...">
-          <div class="card-body">
-            <p class="card-text">zzzzzz</p>
-          </div>
-        </div>
-          
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
+      <section style="background-color: #F0F2F5;">
+         <div class="container py-5">
+           <div class="main-timeline-2">
+             <div class="timeline-2 left-2">
+               <div class="card">
+                 <img src="https://mdbcdn.b-cdn.net/img/Photos/Slides/img%20(135).webp" class="card-img-top"
+                   alt="Responsive image">
+                 <div class="card-body p-4">
+                   <h4 class="fw-bold mb-4">Ut enim ad minim veniam</h4>
+                   <p class="text-muted mb-4"><i class="far fa-clock" aria-hidden="true"></i> 2017</p>
+                   <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                     incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                     ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                 </div>
+               </div>
+             </div>
+             <div class="timeline-2 right-2">
+               <div class="card">
+                 <img src="https://mdbcdn.b-cdn.net/img/Photos/Slides/img%20(129).webp" class="card-img-top"
+                   alt="Responsive image">
+                 <div class="card-body p-4">
+                   <h4 class="fw-bold mb-4">Duis aute irure dolor</h4>
+                   <p class="text-muted mb-4"><i class="far fa-clock" aria-hidden="true"></i> 2016</p>
+                   <p class="mb-0">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
+                     doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
+                     architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit
+                     aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem
+                     sequi nesciunt.</p>
+                 </div>
+               </div>
+             </div>
+             <div class="timeline-2 left-2">
+               <div class="card">
+                 <img src="https://mdbcdn.b-cdn.net/img/Photos/Slides/img%20(131).webp" class="card-img-top"
+                   alt="Responsive image">
+                 <div class="card-body p-4">
+                   <h4 class="fw-bold mb-4">Sed ut nihil unde omnis</h4>
+                   <p class="text-muted mb-4"><i class="far fa-clock" aria-hidden="true"></i> 2015</p>
+                   <p class="mb-0">Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur,
+                     adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam
+                     aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis
+                     suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure
+                     reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui
+                     dolorem eum fugiat quo voluptas nulla pariatur?</p>
+                 </div>
+               </div>
+             </div>
+             <div class="timeline-2 right-2">
+               <div class="card">
+                 <img src="https://mdbcdn.b-cdn.net/img/Photos/Slides/img%20(125).webp" class="card-img-top"
+                   alt="Responsive image">
+                 <div class="card-body p-4">
+                   <h4 class="fw-bold mb-4"> Quis autem vel eum voluptate</h4>
+                   <p class="text-muted mb-4"><i class="far fa-clock" aria-hidden="true"></i> 2014</p>
+                   <p class="mb-0">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
+                     praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint
+                     occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi,
+                     id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio.</p>
+                 </div>
+               </div>
+             </div>
+             <div class="timeline-2 left-2">
+               <div class="card">
+                 <img src="https://mdbcdn.b-cdn.net/img/Photos/Slides/img%20(144).webp" class="card-img-top"
+                   alt="Responsive image">
+                 <div class="card-body p-4">
+                   <h4 class="fw-bold mb-4">Mussum ipsum cacilds</h4>
+                   <p class="text-muted mb-4"><i class="far fa-clock" aria-hidden="true"></i> 2013</p>
+                   <p class="mb-0">Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus
+                     saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum
+                     hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut
+                     perferendis doloribus asperiores repellat.</p>
+                 </div>
+               </div>
+             </div>
+           </div>
+         </div>
+       </section>
        
       <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
