--- a/sefubrenda.com/rsvp/rsvp.html
+++ b/sefubrenda.com/rsvp/rsvp.html
@@ -11,10 +11,11 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./css/rsvp.css" />
+    <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:opsz@6..96&family=Press+Start+2P&family=Sacramento&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300&family=Roboto+Slab:wght@500&family=Sacramento&display=swap"
       rel="stylesheet"
     />
   </head>
@@ -41,7 +42,7 @@
             >
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="#">Our Story</a>
+            <a class="nav-link" href="../story/story.html">Our Story</a>
           </li>
           <li class="nav-item active">
             <a class="nav-link disabled" href="#">The Wedding</a>
@@ -72,16 +73,19 @@
       <div class="info">
         <h1>RSVP</h1>
         <h2>for the wedding of</h2>
-        <h1>Brenda & Sefufim</h1>
-        <p class="line">________________________________________</p>
+        <h1 class="names">Brenda & Sefufim</h1>
+        <div class="line"></div>
         <h2>The Details</h2>
         <p>Saturday, August 17, 2024</p>
         <p>5:00 PM</p>
         <br />
         <h2>Ceremony & Reception</h2>
         <p>Green Villa Gardens</p>
-        <p>3110 Independence Hwy <br/> Independence, OR 97351</p>
-        <p class="line">________________________________________</p>
+        <p>
+          3110 Independence Hwy <br />
+          Independence, OR 97351
+        </p>
+        <div class="line"></div>
         <input type="text" placeholder="Name" />
 
         <input type="text" placeholder="Known Allergies" />
@@ -90,7 +94,7 @@
       </div>
       <div class="button_container">
         <button class="submit">submit</button>
-      </div>    
+      </div>
     </div>
 
     <!-- <div class="name-box"></div> -->
