--- a/sefubrenda.com/index.html
+++ b/sefubrenda.com/index.html
@@ -7,12 +7,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <!-- foundation css framework -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/foundation-sites@6.8.1/dist/css/foundation.min.css"
-      crossorigin="anonymous"
-    />
+
     <!-- bootstrap css framework -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -28,24 +23,34 @@
     <title>S & B</title>
   </head>
   <body>
-    <div class="grid-x">
-      <div class="cell text-center" id="title">
-        <h1>BRENDA & SEFUFIM</h1>
-      </div>
-    </div>
-    <ul class="menu menu-hover-lines align-center nav">
-      <li><a href="../sefubrenda.com/story/story.html">Our Story</a></li>
-      <li><a href="./wedding.html">The Wedding</a></li>
-      <li><a href="#REGISTRY">Registry</a></li>
-      <li><a href="#PHOTOS">Photos</a></li>
-      <li><a href="./rsvp/rsvp.html">RSVP</a></li>
-      <li><a href="#">Contact</a></li>
-    </ul>
-    <div class="grid-x">
-      <div class="cell text-center">
-        <div id="countdown-timer"></div>
-      </div>
-    </div>
+    <nav>
+      <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+          <div class="container-fluid">          
+             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+             </button>
+             <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+                <ul class="navbar-nav  text-center mb-2 mb-lg-0">
+                   <li class="nav-item">
+                      <a class="nav-link" href="../sefubrenda.com/story/story.html">OUR STORY</a>
+                   </li>
+                   <li class="nav-item">
+                      <a class="nav-link" href="#">THE WEDDING</a>
+                   </li>
+                   <li class="nav-item">
+                      <a class="nav-link" href="./rsvp/rsvp.html">RSVP</a>
+                   </li>
+                   <li class="nav-item">
+                      <a class="nav-link" href="./photos/photos.html">PHOTOS</a>
+                   </li>
+                   <li class="nav-item">
+                      <a class="nav-link" href="#">CONTACT US</a>
+                   </li>
+                </ul>
+             </div>
+          </div>
+       </nav>
     <!-- photo carusel -->
     <div class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
