--- a/sefubrenda.com/rsvp/rsvp.html
+++ b/sefubrenda.com/rsvp/rsvp.html
@@ -51,7 +51,7 @@
             <a class="nav-link" href="#">Registry</a>
           </li>
           <li class="nav-item ">
-            <a class="nav-link" href="#">Photos</a>
+            <a class="nav-link" href="../photos/photos.html">Photos</a>
           </li>
           <li class="nav-item ">
             <a class="nav-link" href="#">Contact</a>
