--- a/sefubrenda.com/photos/photos.html
+++ b/sefubrenda.com/photos/photos.html
@@ -19,6 +19,38 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
+  <!-- Language Selection Modal -->
+<div class="modal" tabindex="-1" role="dialog" id="languageModal">
+  <div class="modal-dialog" role="document">
+      <div class="modal-content">
+          <div class="modal-header">
+              <h5 class="modal-title">Select Your Language</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+              </button>
+          </div>
+          <div class="modal-body">
+              <p>Choose your language:</p>
+              <div class="form-check">
+                  <input class="form-check-input" type="radio" name="languageRadio" id="englishRadio" checked>
+                  <label class="form-check-label" for="englishRadio">
+                      English
+                  </label>
+              </div>
+              <div class="form-check">
+                  <input class="form-check-input" type="radio" name="languageRadio" id="spanishRadio">
+                  <label class="form-check-label" for="spanishRadio">
+                      Spanish
+                  </label>
+              </div>
+          </div>
+          <div class="modal-footer">
+              <button type="button" id="language-button" class="btn btn-primary" data-dismiss="modal" onclick="setLanguage()">Save Changes</button>
+          </div>
+
+      </div>
+  </div>
+</div>
     <nav>
         <header>
           <nav class="navbar navbar-expand-lg navbar-light bg-light mb-5">
@@ -51,7 +83,6 @@
          <div class="container">
           <div class="row justify-content-center align-items-center" style="min-height: 15vh;">
               <div id="intro" class="col-md-12 text-center">
-                  <p>Welcome to our photos section, where you'll find our simple, heartfelt story. Our love is like a blooming flower that started with a smile and grew with every shared laugh, and memory. It's about the times we've spent together, the little moments that make life sweet, and the feeling of being truly ourselves when we're with each other. This portion of our website is extra special to us because we get to share with you the beautiful memories that we have built over the past 4 years.<br> - Much love Sefu & Brenda</p>
               </div>
           </div>
       </div>
@@ -62,7 +93,7 @@
                     <div class="card">
                       <img src="./assets/css/photos/99F4B732-687D-49E6-AB3E-FB18E0434470.jpg" class="card-img-top" alt="...">
                       <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <p class="card-text" id="card-1">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                       </div>
                     </div>
                   </div>
@@ -70,7 +101,7 @@
                     <div class="card">
                       <img src="./assets/css/photos/1033190c-28e1-4bcb-a105-b68dbd0e6288.jpg" class="card-img-top" alt="...">
                       <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <p class="card-text" id="card-2">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                       </div>
                     </div>
                   </div>
@@ -78,7 +109,7 @@
                     <div class="card">
                       <img src="./assets/css/photos/7F626628-804D-4563-A943-C2D729221C0E.JPG" class="card-img-top" alt="...">
                       <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <p class="card-text" id="card-3">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                       </div>
                     </div>
                   </div>
@@ -86,7 +117,7 @@
                     <div class="card">
                       <img src="./assets/css/photos/IMG_0365.JPG" class="card-img-top" alt="...">
                       <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <p class="card-text" id="card-4">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                       </div>
                     </div>
                   </div>
@@ -94,7 +125,7 @@
                     <div class="card">
                       <img src="./assets/css/photos/IMG_0540.jpg" class="card-img-top" alt="...">
                       <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <p class="card-text" id="card-5">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                       </div>
                     </div>
                   </div>
@@ -102,7 +133,7 @@
                     <div class="card">
                       <img src="./assets/css/photos/IMG_1073.jpg" class="card-img-top" alt="...">
                       <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <p class="card-text" id="card-6">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                       </div>
                     </div>
                   </div>
@@ -110,7 +141,7 @@
                     <div class="card">
                       <img src="./assets/css/photos/IMG_2077.JPG" class="card-img-top" alt="...">
                       <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <p class="card-text" id="card-7">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                       </div>
                     </div>
                   </div>
@@ -118,7 +149,7 @@
                     <div class="card">
                       <img src="./assets/css/photos/IMG_7528.jpg" class="card-img-top" alt="...">
                       <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <p class="card-text" id="card-8">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                       </div>
                     </div>
                   </div>
@@ -126,7 +157,7 @@
                     <div class="card">
                       <img src="./assets/css/photos/IMG_2511.jpg" class="card-img-top" alt="...">
                       <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <p class="card-text" id="card-9">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                       </div>
                     </div>
                   </div>
@@ -134,7 +165,7 @@
                     <div class="card">
                       <img src="./assets/css/photos/IMG_7607.jpg" class="card-img-top" alt="...">
                       <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <p class="card-text" id="card-10">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                       </div>
                     </div>
                   </div>
@@ -142,7 +173,7 @@
                     <div class="card">
                       <img src="./assets/css/photos/IMG_8289.jpg" class="card-img-top" alt="...">
                       <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <p class="card-text" id="card-11">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                       </div>
                     </div>
                   </div>
@@ -150,7 +181,7 @@
                     <div class="card">
                       <img src="./assets/css/photos/IMG_9299.jpg" class="card-img-top" alt="...">
                       <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <p class="card-text" id="card-12">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                       </div>
                     </div>
                   </div>
@@ -158,55 +189,31 @@
                     <div class="card">
                       <img src="./assets/css/photos/IMG_3411.jpg" class="card-img-top" alt="...">
                       <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <p class="card-text" id="card-13">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                       </div>
                     </div>
                   </div>
                   <div class="col-md-3 mb-4 card-container">
                     <div class="card">
-                      <img src="./assets/css/photos/IMG_0657.JPG" class="card-img-top" alt="...">
+                      <img src="./assets/css/photos/IMG_1430.jpg" class="card-img-top" alt="...">
                       <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <p class="card-text" id="card-14">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                       </div>
                     </div>
                   </div>
                   <div class="col-md-3 mb-4 card-container">
                     <div class="card">
-                      <img src="./assets/css/photos/IMG_0861.JPG" class="card-img-top" alt="...">
+                      <img src="./assets/css/photos/IMG_3041.JPG" class="card-img-top" alt="...">
                       <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <p class="card-text" id="card-15">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                       </div>
                     </div>
                   </div>
                   <div class="col-md-3 mb-4 card-container">
                     <div class="card">
-                      <img src="./assets/css/photos/IMG_1411.jpg" class="card-img-top" alt="...">
+                      <img src="./assets/css/photos/IMG_7377.jpg" class="card-img-top" alt="...">
                       <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-md-3 mb-4 card-container">
-                    <div class="card">
-                      <img src="./assets/css/photos/IMG_2002.jpg" class="card-img-top" alt="...">
-                      <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-md-3 mb-4 card-container">
-                    <div class="card">
-                      <img src="./assets/css/photos/IMG_2541.jpg" class="card-img-top" alt="...">
-                      <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-md-3 mb-4 card-container">
-                    <div class="card">
-                      <img src="./assets/css/photos/IMG_3052.jpg" class="card-img-top" alt="...">
-                      <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <p class="card-text" id="card-16">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                       </div>
                     </div>
                   </div>
@@ -214,21 +221,80 @@
                     <div class="card">
                       <img src="./assets/css/photos/IMG_5592.jpg" class="card-img-top" alt="...">
                       <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <p class="card-text" id="card-17">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                       </div>
                     </div>
                   </div>
+                 
+                  <div class="col-md-3 mb-4 card-container">
+                    <div class="card">
+                      <img src="./assets/css/photos/IMG_2783.jpg" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <p class="card-text" id="card-18">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-3 mb-4 card-container">
+                    <div class="card">
+                      <img src="./assets/css/photos/IMG_0657.JPG" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <p class="card-text" id="card-19">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-3 mb-4 card-container">
+                    <div class="card">
+                      <img src="./assets/css/photos/IMG_0861.JPG" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <p class="card-text" id="card-20">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-3 mb-4 card-container">
+                    <div class="card">
+                      <img src="./assets/css/photos/IMG_1411.jpg" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <p class="card-text" id="card-21">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-3 mb-4 card-container">
+                    <div class="card">
+                      <img src="./assets/css/photos/IMG_2002.jpg" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <p class="card-text" id="card-22">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-3 mb-4 card-container">
+                    <div class="card">
+                      <img src="./assets/css/photos/IMG_2541.jpg" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <p class="card-text" id="card-23">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-3 mb-4 card-container">
+                    <div class="card">
+                      <img src="./assets/css/photos/IMG_3052.jpg" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <p class="card-text" id="card-24">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      </div>
+                    </div>
+                  </div>
+                  
                   <div class="col-md-12 mb-4 card-container">
                     <div class="card">
                       <img src="./assets/css/photos/IMG_2164.JPG" class="card-img-top" alt="Our proposal">
                       <div class="card-body">
-                        <p class="card-text">Love is patient and kind; love does not envy or boast; it is not arrogant or rude. It does not insist on its own way; it is not irritable or resentful; it does not rejoice at wrongdoing, but rejoices with the truth. Love bears all things, believes all things, hopes all things, endures all things.</p>
+                        <p class="card-text" id="card-25">Love is patient and kind; love does not envy or boast; it is not arrogant or rude. It does not insist on its own way; it is not irritable or resentful; it does not rejoice at wrongdoing, but rejoices with the truth. Love bears all things, believes all things, hopes all things, endures all things.</p>
                       </div>
                     </div>
                   </div>
             </div>
         </div>
         <!-- all the needed javascript tags -->
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
