--- a/sefubrenda.com/public_html/index.html
+++ b/sefubrenda.com/public_html/index.html
@@ -16,58 +16,86 @@
       crossorigin="anonymous"
     />
     <!-- google fonts  -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Tangerine:wght@700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Tangerine:wght@700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <title>S & B</title>
   </head>
   <body>
-    <nav>
-      <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-          <div class="container-fluid">          
-             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-             </button>
-             <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-                <ul class="navbar-nav  text-center mb-2 mb-lg-0">
-                   <li class="nav-item">
-                      <a class="nav-link" href="../sefubrenda.com/story/story.html">OUR STORY</a>
-                   </li>
-                   <li class="nav-item">
-                      <a class="nav-link" href="#">THE WEDDING</a>
-                   </li>
-                   <li class="nav-item">
-                      <a class="nav-link" href="./rsvp/rsvp.html">RSVP</a>
-                   </li>
-                   <li class="nav-item">
-                      <a class="nav-link" href="./photos/photos.html">PHOTOS</a>
-                   </li>
-                   <li class="nav-item">
-                      <a class="nav-link" href="#">CONTACT US</a>
-                   </li>
-                </ul>
-             </div>
-          </div>
-       </nav>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div
+          class="collapse navbar-collapse justify-content-center"
+          id="navbarNav"
+        >
+          <ul class="navbar-nav text-center mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" href="./sefubrenda.com/story/story.html"
+                >OUR STORY</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./TheWedding/wedding.html"
+                >THE WEDDING</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./rsvp/rsvp.html">RSVP</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./photos/photos.html">PHOTOS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">REGISTRY</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
     <!-- photo carusel -->
     <div class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="./images/proposal.jpg" class="d-block w-100" alt="...">
+          <img
+            src="./assets/css/images/proposal.jpg"
+            class="d-block w-100"
+            alt="..."
+          />
         </div>
         <div class="carousel-item">
-          <img src="./images/IMG_2171.JPG" class="d-block w-100" alt="...">
+          <img src="./images/IMG_2171.JPG" class="d-block w-100" alt="..." />
         </div>
         <div class="carousel-item">
-          <img src="./images/IMG_2179.JPG" class="d-block w-100" alt="...">
+          <img src="./images/IMG_2179.JPG" class="d-block w-100" alt="..." />
         </div>
       </div>
     </div>
+    <!-- footer  -->
 
+    <footer class="bg-dark text-light text-center py-3">
+      <p>&copy; 2023 Brenda & Sefufim</p>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="./script/script.js"></script>
   </body>
