--- a/sefubrenda.com/public_html/photos/photos.html
+++ b/sefubrenda.com/public_html/photos/photos.html
@@ -13,10 +13,10 @@
     />
     <!-- google fonts  -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Tangerine:wght@700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Tangerine:wght@700&display=swap" rel="stylesheet">
     <!-- css link -->
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/photos.css">
 </head>
 <body>
   <!-- Language Selection Modal -->
@@ -51,34 +51,51 @@
       </div>
   </div>
 </div>
-    <nav>
-        <header>
-          <nav class="navbar navbar-expand-lg navbar-light bg-light mb-5">
-            <div class="container-fluid">          
-               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-               </button>
-               <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-                  <ul class="navbar-nav  text-center mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link" href="../index.html">HOME</a>
-                     </li>
-                     <li class="nav-item">
-                        <a class="nav-link" href="../story/story.html">OUR STORY</a>
-                     </li>
-                     <li class="nav-item">
-                        <a class="nav-link" href="#">THE WEDDING</a>
-                     </li>
-                     <li class="nav-item">
-                        <a class="nav-link" href="../rsvp/rsvp.html">RSVP</a>
-                     </li>
-                     <li class="nav-item">
-                        <a class="nav-link" href="#">CONTACT US</a>
-                     </li>
-                  </ul>
-               </div>
-            </div>
-         </nav>
+<div class="title-container"> 
+  <p>Sefufim Alvarez</p>
+    <p>&</p>
+   <p>Brenda Rivera</p>
+</div>
+   <!-- nav bar -->
+   <nav class="navbar navbar-expand-lg ">
+    <div class="container-fluid">
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarNav"
+        aria-controls="navbarNav"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div
+        class="collapse navbar-collapse justify-content-center"
+        id="navbarNav"
+      >
+        <ul class="navbar-nav text-center mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" href="../index.html"
+              >HOME</a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../story/story.html">OUR STORY</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../rsvp/rsvp.html">RSVP</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../TheWedding/wedding.html">THE WEDDING</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">REGISTRY</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
          <!-- intro -->
          <div class="container">
           <div class="row justify-content-center align-items-center" style="min-height: 15vh;">
@@ -293,6 +310,12 @@
                   </div>
             </div>
         </div>
+        <!-- footer  -->
+   
+          <footer class="bg-dark text-light text-center py-3">
+            <p>&copy; 2023 Brenda & Sefufim</p>
+        </footer>
+       
         <!-- all the needed javascript tags -->
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js"></script>
