--- a/sefubrenda.com/public_html/TheWedding/wedding.html
+++ b/sefubrenda.com/public_html/TheWedding/wedding.html
@@ -3,15 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Our Wedding</title>
+    <title>The Wedding</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./css/rsvp.css" />
-    <!-- Google fonts -->
+    <link rel="stylesheet" href="./css/wedding.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -46,12 +45,10 @@
               <a class="nav-link" href="../story/story.html">OUR STORY</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../TheWedding/wedding.html"
-                >THE WEDDING</a
-              >
+              <a class="nav-link" href="./rsvp/rsvp.html">RSVP</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../photos/photos.html">PHOTOS</a>
+              <a class="nav-link" href="./photos/photos.html">PHOTOS</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">REGISTRY</a>
@@ -61,42 +58,13 @@
       </div>
     </nav>
 
-    <!-- Rsvp form -->
     <div class="top"></div>
-    <div class="form">
-      <div class="info">
-        <h1>RSVP</h1>
-        <h2>for the wedding of</h2>
-        <h1 class="names">Brenda & Sefufim</h1>
-        <div class="line"></div>
-        <h2>The Details</h2>
-        <p>Saturday, August 17, 2024</p>
-        <p>5:00 PM</p>
-        <br />
-        <h2>Ceremony & Reception</h2>
-        <p>Green Villa Gardens</p>
-        <p>
-          3110 Independence Hwy <br />
-          Independence, OR 97351
-        </p>
-        <div class="line"></div>
-        <input type="text" placeholder="Name" id="name" />
 
-        <input type="text" placeholder="Known Allergies" id="allergies" />
-
-        <input type="number" placeholder="# of Guests" id="guest" />
-      </div>
-      <div class="button_container">
-        <button class="button" type="button" onclick="validateForm()">
-          Submit
-        </button>
-      </div>
-    </div>
     <!-- footer  -->
+
     <footer class="bg-dark text-light text-center py-3">
       <p>&copy; 2023 Brenda & Sefufim</p>
     </footer>
-    <!-- <div class="name-box"></div> -->
     <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
