--- a/sefubrenda.com/public_html/story/story.html
+++ b/sefubrenda.com/public_html/story/story.html
@@ -19,39 +19,47 @@
       <link rel="stylesheet" href="./assets/story.css" />
    </head>
    <body>
-      <nav>
-      <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-          <div class="container-fluid">
-             <div class="navbar-brand names ">
-                <a href="#"> Brenda & Sefu</a>
-             </div>
-             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-             </button>
-             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto text-center mb-2 mb-lg-0">
-                   <li class="nav-item">
-                      <a class="nav-link" href="../index.html">HOME</a>
-                   </li>
-                   <li class="nav-item">
-                      <a class="nav-link" href="#">THE WEDDING</a>
-                   </li>
-                   <li class="nav-item">
-                      <a class="nav-link" href="../rsvp/rsvp.html">RSVP</a>
-                   </li>
-                   <li class="nav-item">
-                      <a class="nav-link" href="#">PHOTOS</a>
-                   </li>
-                   <li class="nav-item">
-                      <a class="nav-link" href="#">CONTACT US</a>
-                   </li>
-                </ul>
-             </div>
-          </div>
-       </nav>
-       
-      </header>
+      <!-- nav bar -->
+   <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarNav"
+        aria-controls="navbarNav"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div
+        class="collapse navbar-collapse justify-content-center"
+        id="navbarNav"
+      >
+        <ul class="navbar-nav text-center mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" href="../index.html"
+              >HOME</a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../rsvp/rsvp.html">RSVP</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../TheWedding/wedding.html">THE WEDDING</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../photos/photos.html">PHOTOS</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">REGISTRY</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
       <!-- intro -->
       <div class="container-fluid intro text-center mt-5">
          <p>Our Story</p>
@@ -143,10 +151,15 @@
              </div>
            </div>
          </div>
+          <!-- footer  -->
+          <footer class="bg-dark text-light text-center py-3">
+            <p>&copy; 2023 Brenda & Sefufim</p>
+        </footer>
        </section>
        
-      <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
-
+       <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+       <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js"></script>
+       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
    </body>
 </html>
