added better styling

--- a/sefubrenda.com/public_html/photos/photos.html
+++ b/sefubrenda.com/public_html/photos/photos.html
@@ -40,7 +40,7 @@
               <div class="form-check">
                   <input class="form-check-input" type="radio" name="languageRadio" id="spanishRadio">
                   <label class="form-check-label" for="spanishRadio">
-                      Spanish
+                      Español
                   </label>
               </div>
           </div>
@@ -106,7 +106,7 @@
         <!-- cards -->
         <div class="container">
             <div class="row">
-                <div class="col-md-3 mb-4 card-container">
+                <div class="col-md-3 mb-5 card-container">
                     <div class="card">
                       <img src="./assets/css/photos/99F4B732-687D-49E6-AB3E-FB18E0434470.jpg" class="card-img-top" alt="...">
                       <div class="card-body">
@@ -114,7 +114,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-md-3 mb-4 card-container">
+                  <div class="col-md-3 mb-5 card-container">
                     <div class="card">
                       <img src="./assets/css/photos/1033190c-28e1-4bcb-a105-b68dbd0e6288.jpg" class="card-img-top" alt="...">
                       <div class="card-body">
@@ -122,7 +122,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-md-3 mb-4 card-container">
+                  <div class="col-md-3 mb-5 card-container">
                     <div class="card">
                       <img src="./assets/css/photos/7F626628-804D-4563-A943-C2D729221C0E.JPG" class="card-img-top" alt="...">
                       <div class="card-body">
@@ -130,7 +130,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-md-3 mb-4 card-container">
+                  <div class="col-md-3 mb-5 card-container">
                     <div class="card">
                       <img src="./assets/css/photos/IMG_0365.JPG" class="card-img-top" alt="...">
                       <div class="card-body">
@@ -138,7 +138,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-md-3 mb-4 card-container">
+                  <div class="col-md-3 mb-5 card-container">
                     <div class="card">
                       <img src="./assets/css/photos/IMG_0540.jpg" class="card-img-top" alt="...">
                       <div class="card-body">
@@ -146,7 +146,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-md-3 mb-4 card-container">
+                  <div class="col-md-3 mb-5 card-container">
                     <div class="card">
                       <img src="./assets/css/photos/IMG_1073.jpg" class="card-img-top" alt="...">
                       <div class="card-body">
@@ -154,7 +154,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-md-3 mb-4 card-container">
+                  <div class="col-md-3 mb-5 card-container">
                     <div class="card">
                       <img src="./assets/css/photos/IMG_2077.JPG" class="card-img-top" alt="...">
                       <div class="card-body">
@@ -162,7 +162,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-md-3 mb-4 card-container">
+                  <div class="col-md-3 mb-5 card-container">
                     <div class="card">
                       <img src="./assets/css/photos/IMG_7528.jpg" class="card-img-top" alt="...">
                       <div class="card-body">
@@ -170,7 +170,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-md-3 mb-4 card-container">
+                  <div class="col-md-3 mb-5 card-container">
                     <div class="card">
                       <img src="./assets/css/photos/IMG_2511.jpg" class="card-img-top" alt="...">
                       <div class="card-body">
@@ -178,7 +178,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-md-3 mb-4 card-container">
+                  <div class="col-md-3 mb-5 card-container">
                     <div class="card">
                       <img src="./assets/css/photos/IMG_7607.jpg" class="card-img-top" alt="...">
                       <div class="card-body">
@@ -186,7 +186,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-md-3 mb-4 card-container">
+                  <div class="col-md-3 mb-5 card-container">
                     <div class="card">
                       <img src="./assets/css/photos/IMG_8289.jpg" class="card-img-top" alt="...">
                       <div class="card-body">
@@ -194,7 +194,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-md-3 mb-4 card-container">
+                  <div class="col-md-3 mb-5 card-container">
                     <div class="card">
                       <img src="./assets/css/photos/IMG_9299.jpg" class="card-img-top" alt="...">
                       <div class="card-body">
@@ -202,7 +202,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-md-3 mb-4 card-container">
+                  <div class="col-md-3 mb-5 card-container">
                     <div class="card">
                       <img src="./assets/css/photos/IMG_3411.jpg" class="card-img-top" alt="...">
                       <div class="card-body">
@@ -210,7 +210,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-md-3 mb-4 card-container">
+                  <div class="col-md-3 mb-5 card-container">
                     <div class="card">
                       <img src="./assets/css/photos/IMG_1430.jpg" class="card-img-top" alt="...">
                       <div class="card-body">
@@ -218,7 +218,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-md-3 mb-4 card-container">
+                  <div class="col-md-3 mb-5 card-container">
                     <div class="card">
                       <img src="./assets/css/photos/IMG_3041.JPG" class="card-img-top" alt="...">
                       <div class="card-body">
@@ -226,7 +226,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-md-3 mb-4 card-container">
+                  <div class="col-md-3 mb-5 card-container">
                     <div class="card">
                       <img src="./assets/css/photos/IMG_7377.jpg" class="card-img-top" alt="...">
                       <div class="card-body">
@@ -234,7 +234,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-md-3 mb-4 card-container">
+                  <div class="col-md-3 mb-5 card-container">
                     <div class="card">
                       <img src="./assets/css/photos/IMG_5592.jpg" class="card-img-top" alt="...">
                       <div class="card-body">
@@ -243,7 +243,7 @@
                     </div>
                   </div>
                  
-                  <div class="col-md-3 mb-4 card-container">
+                  <div class="col-md-3 mb-5 card-container">
                     <div class="card">
                       <img src="./assets/css/photos/IMG_2783.jpg" class="card-img-top" alt="...">
                       <div class="card-body">
@@ -251,7 +251,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-md-3 mb-4 card-container">
+                  <div class="col-md-3 mb-5 card-container">
                     <div class="card">
                       <img src="./assets/css/photos/IMG_0657.JPG" class="card-img-top" alt="...">
                       <div class="card-body">
@@ -259,7 +259,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-md-3 mb-4 card-container">
+                  <div class="col-md-3 mb-5 card-container">
                     <div class="card">
                       <img src="./assets/css/photos/IMG_0861.JPG" class="card-img-top" alt="...">
                       <div class="card-body">
@@ -267,7 +267,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-md-3 mb-4 card-container">
+                  <div class="col-md-3 mb-5 card-container">
                     <div class="card">
                       <img src="./assets/css/photos/IMG_1411.jpg" class="card-img-top" alt="...">
                       <div class="card-body">
@@ -275,7 +275,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-md-3 mb-4 card-container">
+                  <div class="col-md-3 mb-5 card-container">
                     <div class="card">
                       <img src="./assets/css/photos/IMG_2002.jpg" class="card-img-top" alt="...">
                       <div class="card-body">
@@ -283,7 +283,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-md-3 mb-4 card-container">
+                  <div class="col-md-3 mb-5 card-container">
                     <div class="card">
                       <img src="./assets/css/photos/IMG_2541.jpg" class="card-img-top" alt="...">
                       <div class="card-body">
@@ -291,7 +291,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-md-3 mb-4 card-container">
+                  <div class="col-md-3 mb-5 card-container">
                     <div class="card">
                       <img src="./assets/css/photos/IMG_3052.jpg" class="card-img-top" alt="...">
                       <div class="card-body">
@@ -300,7 +300,7 @@
                     </div>
                   </div>
                   
-                  <div class="col-md-12 mb-4 card-container">
+                  <div class="col-md-12 mb-5 card-container">
                     <div class="card">
                       <img src="./assets/css/photos/IMG_2164.JPG" class="card-img-top" alt="Our proposal">
                       <div class="card-body">
