styled main page and reworked file structure

--- a/sefubrenda.com/public_html/index.html
+++ b/sefubrenda.com/public_html/index.html
@@ -26,6 +26,13 @@
     <title>S & B</title>
   </head>
   <body>
+    <!-- Title -->
+    <div class="title-container"> 
+      <p>Sefufim Alvarez</p>
+        <p>&</p>
+       <p>Brenda Rivera</p>
+    </div>
+    <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
         <button
@@ -67,6 +74,12 @@
         </div>
       </div>
     </nav>
+    <!-- countdown timer -->
+    <div class="grid-x">
+      <div class="cell text-center">
+        <div id="countdown-timer"></div>
+      </div>
+    </div>
     <!-- photo carusel -->
     <div class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
@@ -97,6 +110,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-    <script src="./script/script.js"></script>
+    <script src="./assets/script/script.js"></script>
   </body>
 </html>
