arragned the our wedding page

--- a/sefubrenda.com/public_html/TheWedding/wedding.html
+++ b/sefubrenda.com/public_html/TheWedding/wedding.html
@@ -52,10 +52,10 @@
               <a class="nav-link" href="../story/story.html">OUR STORY</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./rsvp/rsvp.html">RSVP</a>
+              <a class="nav-link" href="../rsvp/rsvp.html">RSVP</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./photos/photos.html">PHOTOS</a>
+              <a class="nav-link" href="../photos/photos.html">PHOTOS</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">REGISTRY</a>
